# pyrmexplorer

./: .gitignore  pyproject.toml
rmexplorer/: rmexplorerwindow.py  settings.py
